--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -2,115 +2,9 @@ $main-color: #1869BC;
 $text-color: #00005d;
 $bg-color: #fff;
 
-/*---------------------------------
-common
----------------------------------*/
 
-html {
-  font-size: 100%;
-}
-
-body {
-  width: 100%;
-  color: $main-color;
-  margin: 0;
-  font: {
-    family: 'Kalam', cursive;
-    family: 'Short Stack', cursive;
-    family: 'Klee One', cursive;
-  }
-}
-
-img {
-  max-width: 100%;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.mb {
-  margin-bottom: 100px;
-}
-
-
-.content-title {
-  position: relative;
-  z-index: 100;
-  font-size: 5rem;
-  text-align: left;
-  margin-bottom: 40px;
-  margin-top: 0;
-  padding-top: 0;
-}
-
-h3 {
-  font-size: 1.5rem;
-  padding-bottom: 10px; 
-}
-
-p {
-  line-height: 1.6;
-  color: $text-color;
-  font-size: 1rem;
-}
-
-
-#service, #about, #works, #contact {
-  padding-top: 100px;
-  margin-top:  -100px;
-}
-
-
-
-
-/*---------------------------------
-container
----------------------------------*/
-.container{
-  background-image: linear-gradient(#fff, #cdf7f7, #fff, #cdf7f7);
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-
-/*---------------------------------
-text
----------------------------------*/
-.text {
-  text-align: left;
-  opacity: 0;
-  transition: opacity 4s;
-  position: relative;
-  z-index: 60;
-}
-
-.text.appear {
-  opacity: 1;
-}
-
-/*---------------------------------
-wrapper
----------------------------------*/
-.wrapper {
-  width: 85%;
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity .4s, transform 1s;
-  margin: {
-    left: auto;
-    right: auto;
-  }
-}
-
-.wrapper.appear {
-  opacity: 1;
-  transform: none;
+.content-width {
+  width: 95%;
 }
 
 /*---------------------------------
@@ -118,13 +12,11 @@ header
 ---------------------------------*/
 #header {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // text-align: center;
   position: fixed;
   background: $bg-color;
   padding: 5px 0;
-  z-index: 100;
+  z-index: 200;
 }
 
 .header-logo {
@@ -132,11 +24,21 @@ header
   font-size: 0.8rem;
 }
 
+.header-nav {
+  align-items:center;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+
+
+
+
 .main-logo {
   width: 30px;
   margin: {
     right: 5px;
-    left: 20px;
   }
 }
 
@@ -148,7 +50,6 @@ header
 .mobile-nav {
   margin: {
   left: auto;
-  right: 20px;
   }
   cursor: pointer;
 }
@@ -191,9 +92,9 @@ hamburger menu
   }
   #close {
     position: absolute;
-    top: 16px;
-    right: 16px;
-    font-size: 32px;
+    top: 8px;
+    right: 8px;
+    font-size: 30px;
     cursor: pointer;
   }
   .close-nav {
@@ -227,301 +128,6 @@ hamburger menu
 
 .pc-nav {
   display: none;
-}
-
-/*---------------------------------
-main
----------------------------------*/
-/* outer */
-.main-visual {
-  position: relative;
-  width:100%;
-  margin-bottom: 60px;
-
-  &-text {
-    font-size: 4.5rem;
-    color: #fff;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 30;
-  }
-  &-item {
-    margin-top: 50px;
-    width: 100%;
-    object-fit: contain;
-  }
-  .outside {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-    &::after {
-      position: absolute;
-      left: 3px;
-      bottom: -3px;
-      content: "Let's move on";
-      font-size: 4.5rem;
-      color: $main-color;
-      z-index: 20;
-    }
-  }
-}
-
-
-/*---------------------------------
-service
----------------------------------*/
-#service {
-  position: relative;
-  z-index: 30;
-  .text-wrap {
-    position: relative;
-    z-index: 50;
-    width: 100%;
-  }
-  .content-item {
-    margin-top: -10px;
-  }
-}
-
-.service-wrap {
-  display: flex;
-  .item-text {
-    margin-bottom: 40px;
-    width: 150px;
-    margin-right: 30px;
-  }
-  .lang {
-    margin-bottom: 30px;
-  }
-}
-
-.desk-work {
-  width: 300px;
-  position: absolute;
-  right: 0;
-  bottom: -50px;
-  z-index: 0;
-}
-
-/*---------------------------------
-about
----------------------------------*/
-#about {
-  position: relative;
-  .name {
-    font-size: 2rem;
-    color: $text-color;
-    margin: {
-      top: -20px;
-      bottom: 15px;
-    }
-  }
-}
-.profile {
-  text-align: left;
-  position: relative;
-  z-index: 50;
-  margin-bottom:15px;
-}
-
-.about-bg {
-  background: $bg-color;
-  opacity: 0.1;
-}
-
-.about-pic {
-  width: 600px;
-  margin: 0 auto;
-  border-radius: 50%;
-  object-fit: hidden;
-  position: relative;
-  left: 100px;
-  top:-300px;
-  z-index:0;
-}
-
-.sky-pic {
-  width: 600px;
-  max-height: 600px;
-  border-radius: 50%;
-  object-fit: cover;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  z-index: -0;
-
-}
-
-.dance-pic {
-  margin: 0 auto;
-  width: 300px;
-  position: absolute;
-  top: 190px;
-  left: 0;
-  right: 500px;
-  z-index: 0;
-}
-
-/*---------------------------------
-works
----------------------------------*/
-#works {
-  position: relative;
-  z-index: 30;
-  .content-title {
-    color: $main-color;
-  }
-}
-
-.works-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.works-item-wrap {
-  width: 45%;
-  height: 45%;
-  text-align: center;
-  background: $bg-color;
-}
-
-.works-item-img {
-  transition: .2s
-}
-.works-item-img:hover {
-  opacity: .7;
-  transition: .2s
-}
-.works-item-title {
-  margin-bottom: 5px;
-}
-/*---------------------------------
-contact
----------------------------------*/
-#contact {
-  position: relative;
-  z-index: 50;
-}
-
-/*---------------------------------
-form
----------------------------------*/
-
-.form-menu {
-  position: relative;
-  z-index: 90;
-  margin-bottom: 8px ;
-}
-
-label {
-  margin-bottom: 4px;
-  display: block;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-  background: rgba(255, 255, 255, .4);
-  border: solid 1px #1968BC;
-  border-radius: 5px;
-  width: 100%;
-}
-textarea {
-  height: 6rem;
-}
-
-button {
-  width: 100%;
-  background: $main-color;
-  color: #fff;
-  border-radius: 5px;
-  position: relative;
-  height: 50px;
-  font-size: 1.4rem;
-  transition: .5s ease all;
-  .mail {
-    padding-right: 15px;
-  }
-  &:hover {
-    background: $bg-color;
-    color: $main-color;
-    &:before {
-      width: 100%;
-      transition: .5s ease .2s all;
-    }
-    &::after {
-      animation: arrow 1.2s .7s infinite;
-    }
-  }
-  &:before {
-    content: '';
-    position: absolute;
-    right: 0;
-    height: 3px;
-    width: 0;
-    background: $main-color;
-    top: inherit;
-    left: 0;
-    bottom: 0;
-  }
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: .8rem;
-    margin-top: -5px;
-    border: 7px solid transparent;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-    border-left-color: $main-color;
-    opacity: 0;
-  }
-}
-
-@keyframes arrow {
-  50% {
-    right: .2em;
-    opacity: 1;
-  }
-  
-  100% {
-    right: -.4em;
-    opacity: 0;
-  }
-}
-
-.form-img {
-  object-fit: contain;
-  max-width: 100%;
-  margin: 0 auto;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  right: 0;
-}
-/*---------------------------------
-plane
----------------------------------*/
-.plane {
-  width: 50px;
-  position: absolute;
-  top: 280px;
-  right: -50px;
-  animation: move 6s infinite;
-  z-index: 100;
-}
-@keyframes move {
-  0% {
-    transform: none;
-  }
-  100% {
-    transform: translate(-700px, -150px);
-  }
 }
 
 /*---------------------------------
@@ -597,157 +203,98 @@ footer
   color: #fff;
 }
 
-
 /*---------------------------------
-display-animation
+media max478
 ---------------------------------*/
-
-.display-animation {
-  width: 100%;
-  height:90%;
-  position: absolute;
-  top: 300px;
-  right: 0;
-  left: 0;
-  z-index: 20;
-  display: flex;
-  justify-content: space-between;
-  li {
-    position: absolute;
-    margin: 0 auto;
-    top: -370px;
-    list-style:none;
-    z-index: 20;
-  }
-}
-
-.display-item {
-  width: 60px;
-}
-
-@keyframes fall {
-  to {
-    top: 100%;
-  }
-}
-
-@keyframes sway1 {
-  from {
-    transform: translateX(0px)
-    rotate(0deg);
-  }
-    to {
-      transform: translateX(100px)
-      rotate(-60deg);
+@media (max-width: 478px) {
+    /*---------------------------------
+    footer
+    ---------------------------------*/
+    #footer {
+      font-size: 1rem;
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
-  }
-  @keyframes sway2 {
-    from {
-      transform: translateX(100px)
-      rotate(60deg);
-    }
-    to {
-      transform: translateX(0px)
-      rotate(0deg);
-    }
+    
   }
 
-  @keyframes fade {
-    0% {
-      opacity: .4;
-    }
-    20% {
-      opacity: .6;
-    }
-    45% {
-      opacity: .5;
-    }
-    50% {
-      opacity: .7;
-    }
-    65% {
-      opacity: .5
-    }
-    75% {
-      opacity: .4;
-    }
-    85% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
+  @media (min-width: 640px) {
 
-  .display-animation li:nth-child(1) {
-    left: 0%;
-    animation: fall 27s linear infinite,
-    fade 27s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 0s;
-    opacity: 0.6;
-  }
-  .display-animation li:nth-child(2) {
-    left:10%;
-    animation: fall 31s linear infinite,
-    fade 31s ease infinite,
-    sway2 2s ease-in-out infinite alternate;
-    animation-delay: 7s;
-  }
-  .display-animation li:nth-child(3) {
-    left: 20%;
-    animation: fall 26s linear infinite,
-    fade 26s ease infinite,
-    sway1 4s ease-in-out infinite alternate;
-    animation-delay: 12s;
-  }
-  .display-animation li:nth-child(4) {
-    left: 25%;
-    animation: fall 30s linear infinite,
-    fade 30s ease infinite,
-    sway2 5s ease-in-out infinite alternate;
-    animation-delay: 17s;
-  }
-  .display-animation li:nth-child(5) {
-    left: 35%;
-    animation: fall 28s linear infinite,
-    fade 28s ease infinite,
-    sway2 2s ease-in-out infinite alternate;
-    animation-delay: 22s;
-    opacity: 0.7;
-  }
-    .display-animation li:nth-child(6) {
-        left: 50%;
-        animation: fall 30s linear infinite,
-        fade 30s ease infinite,
-        sway2 3s ease-in-out infinite alternate;
-        animation-delay: 3.5s;
+    /*---------------------------------
+    nav
+    ---------------------------------*/
+      .mobile-nav {
+        display: none;
       }
-      .display-animation li:nth-child(7) {
-          left:65%;
-          animation: fall 26s linear infinite,
-          fade 26s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 9.5s;
+  
+      .pc-nav {
+        display: block;
+        margin-right: 15px;
+        ul {
+          display: flex;
+        }
+        &-text {
+          display: block;
+          border-radius: 5px;
+          padding: 5px 14px;
+          margin: 3px;
+          font-size: .9rem;
+          color: $main-color;
+          transition-property: background .3s ease;
+        }
+        a:hover {
+          background: $main-color;
+          color: #fff;
+          transition-property: background .3s ease;
+        }
+      }
+  
+
+  /*---------------------------------
+  footer
+  ---------------------------------*/
+  .nav-text {
+    font-size: 1.2rem;
   }
-  .display-animation li:nth-child(8) {
-    left: 75%;
-    animation: fall 26s linear infinite,
-    fade 26s ease infinite,
-    sway2 3s ease-in-out infinite alternate;
-    animation-delay: 14.5s;
+}
+
+
+@media (min-width: 1040px) {
+
+  .content-width {
+    width: 90%;
   }
-  .display-animation li:nth-child(9) {
-    left: 80%;
-    animation: fall 27s linear infinite,
-    fade 27s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 19.5s;
+
+  /*---------------------------------
+  header
+  ---------------------------------*/
+  .header-logo {
+    display: flex;
+    font-size: 1rem;
   }
-  .display-animation li:nth-child(10) {
-    left: 90%;
-    animation: fall 28s linear infinite,
-    fade 28s ease infinite,
-    sway2 3s ease-in-out infinite alternate;
-    animation-delay: 24.5s;
+
+  .main-logo {
+    width: 40px;
   }
+
+  .pc-nav-text {
+    font-size: 1.2em;
+    padding: 5px 16px;
+    margin: 3px;
+  }
+
+  .header-nav {
+  width: 90%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+
+  /*---------------------------------
+  footer
+  ---------------------------------*/
+  .footer-nav a {
+    font-size: 1.25rem;
+  }
+}
