--- a/css/contact.css
+++ b/css/contact.css
@@ -295,68 +295,6 @@ media max478
   }
 }
 /*---------------------------------
-service
----------------------------------*/
-.mb {
-  margin-bottom: 200px;
-}
-
-#service {
-  position: relative;
-  z-index: 30;
-}
-#service .text-wrap {
-  position: relative;
-  z-index: 50;
-  width: 100%;
-}
-
-.content-item {
-  margin-top: -10px;
-}
-
-.content-item,
-.item-text,
-.service-wrap {
-  margin-left: 0;
-}
-
-.item-text {
-  margin-bottom: 40px;
-}
-
-.service-wrap {
-  display: flex;
-}
-.service-wrap .item-text {
-  width: 150px;
-  margin-right: 30px;
-}
-
-/*---------------------------------
-media min640
----------------------------------*/
-@media (min-width: 640px) {
-  /*---------------------------------
-  service
-  ---------------------------------*/
-  .service-desk-img {
-    left: 150px;
-    margin: 0;
-  }
-}
-/*---------------------------------
-@media min1040
----------------------------------*/
-@media (min-width: 1040px) {
-  /*---------------------------------
-  service
-  ---------------------------------*/
-  .service-desk-img {
-    margin: 0;
-  }
-}
-/*---------------------------------
 common
 ---------------------------------*/
 html {
@@ -454,14 +392,6 @@ wrapper
   transform: none;
 }
 
-.desk-work {
-  width: 350px;
-  position: absolute;
-  right: -30px;
-  bottom: -100px;
-  z-index: 0;
-}
-
 /*---------------------------------
 media max478
 ---------------------------------*/
@@ -491,24 +421,12 @@ media min640
     line-height: 1.7;
   }
 
-  .name,
-.content-item,
+  h3,
 .service-wrap,
 .asterisk,
 .lang,
 .profile {
-    margin-left: 30%;
-  }
-
-  /*---------------------------------
-  service
-  ---------------------------------*/
-  .desk-work {
-    width: 450px;
-    position: absolute;
-    right: -50px;
-    bottom: -150px;
-    z-index: 10;
+    margin-left: 40%;
   }
 }
 /*---------------------------------
@@ -538,371 +456,12 @@ media min640
   /*---------------------------------
   text
   ---------------------------------*/
-  .name,
-.content-item,
+  h3,
 .service-wrap,
 .asterisk,
 .lang,
 .profile {
-    margin-left: 40%;
-  }
-
-  /*---------------------------------
-  service
-  ---------------------------------*/
-  .desk-work {
-    width: 500px;
-    margin: 0 auto;
-    left: 55%;
-  }
-}
-/*---------------------------------
-main
----------------------------------*/
-/* outer */
-.main-visual {
-  position: relative;
-  width: 100%;
-  margin-bottom: 60px;
-}
-.main-visual-text {
-  display: inline-block;
-  font-size: 4.5rem;
-  color: #fff;
-  position: absolute;
-  left: auto;
-  right: auto;
-  bottom: 0;
-  z-index: 30;
-}
-.main-visual-text::after {
-  position: absolute;
-  left: 3px;
-  bottom: -3px;
-  content: "Let's move on";
-  font-size: 4.5rem;
-  white-space: pre;
-  color: #1869BC;
-  z-index: -1;
-}
-.main-visual-item {
-  margin-top: 50px;
-  width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.main-outer {
-  width: 95%;
-  margin: 0 auto;
-}
-
-/*---------------------------------
-media max478
----------------------------------*/
-@media (max-width: 478px) {
-  /*---------------------------------
-  main-visual
-  ---------------------------------*/
-  .main-visual {
-    margin-bottom: 30px;
-  }
-  .main-visual-text {
-    font-size: 3rem;
-  }
-  .main-visual-text::after {
-    font-size: 3rem;
-    left: 1.5px;
-    bottom: -1.5px;
-  }
-}
-/*---------------------------------
-media min640
----------------------------------*/
-@media (min-width: 640px) {
-  /*---------------------------------
-  main_visual
-  ---------------------------------*/
-  .main-visual {
-    max-height: 650px;
-  }
-  .main-visual-item {
-    max-height: 600px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: top left;
-       object-position: top left;
-  }
-  .main-visual-text {
-    font-size: 5.8rem;
-  }
-  .main-visual-text::after {
-    font-size: 5.8rem;
-  }
-}
-/*---------------------------------
-@media min1040
----------------------------------*/
-@media (min-width: 1040px) {
-  /*---------------------------------
-  main_visual
-  ---------------------------------*/
-  .main-visual {
-    position: relative;
-    display: flex;
-    height: 700px;
-    margin-bottom: 100px;
-  }
-  .main-visual-item {
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: top right;
-       object-position: top right;
-    position: relative;
-    width: 80%;
-    z-index: 100;
-  }
-  .main-visual .main-outer {
-    position: relative;
-    width: 20%;
-    margin: 0 auto;
-    background-image: linear-gradient(#a0cbf7, #cdf7f7, #fff);
-  }
-  .main-visual .main-visual-text {
-    position: absolute;
-    width: 85%;
-    font-size: 8.5rem;
-    white-space: pre;
-    z-index: 150;
-  }
-  .main-visual .main-visual-text span {
-    font-size: 10rem;
-  }
-  .main-visual .main-visual-text::after {
-    display: none;
-  }
-  .main-visual .outside {
-    height: 700px;
-    overflow: hidden;
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    overflow: hidden;
-  }
-  .main-visual .outside::after {
-    width: 95%;
-    margin: 0 auto;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    white-space: pre;
-    color: #1869BC;
-    content: "Let's move on";
-    font-size: 10rem;
-    z-index: 150;
-  }
-}
-/*---------------------------------
-about
----------------------------------*/
-#about {
-  position: relative;
-}
-#about .name {
-  font-size: 2rem;
-  color: #00005d;
-  margin-top: -20px;
-  margin-bottom: 15px;
-}
-
-.profile {
-  text-align: left;
-  position: relative;
-  z-index: 50;
-  margin-bottom: 15px;
-}
-
-.about-bg {
-  background: #fff;
-  opacity: 0.1;
-}
-
-.about-pic {
-  width: 600px;
-  margin: 0 auto;
-  border-radius: 50%;
-  -o-object-fit: hidden;
-     object-fit: hidden;
-  position: relative;
-  left: 100px;
-  top: -300px;
-  z-index: 0;
-}
-
-.sky-pic {
-  width: 600px;
-  max-height: 600px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  z-index: 0;
-}
-
-.dance-pic {
-  margin: 0 auto;
-  width: 300px;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 500px;
-  z-index: 0;
-}
-
-/*---------------------------------
-media max478
----------------------------------*/
-@media (max-width: 478px) {
-  /*---------------------------------
-   about
-   ---------------------------------*/
-  #about .name {
-    font-size: 1.2rem;
-  }
-  #about .dance-pic {
-    top: 30px;
-  }
-}
-/*---------------------------------
-media min640
----------------------------------*/
-@media (min-width: 640px) {
-  /*---------------------------------
-  about
-  ---------------------------------*/
-  #about {
-    position: relative;
-  }
-
-  .dance-pic {
-    display: block;
-    margin: 0 auto;
-    width: 450px;
-    position: absolute;
-    top: 100px;
-    left: 0px;
-    z-index: 0;
-  }
-
-  .about-pic {
-    width: 700px;
-    top: -280px;
-  }
-
-  .sky-pic {
-    width: 700px;
-    max-height: 700px;
-    left: 20px;
-  }
-}
-/*---------------------------------
-@media min1040
----------------------------------*/
-@media (min-width: 1040px) {
-  /*---------------------------------
-  about
-  ---------------------------------*/
-  .about-pic {
-    width: 800px;
-    top: -280px;
-    left: 180px;
-  }
-
-  .dance-pic {
-    width: 550px;
-    position: absolute;
-    right: 600px;
-    z-index: 0;
-  }
-}
-/*---------------------------------
-works
----------------------------------*/
-#works {
-  position: relative;
-  z-index: 30;
-}
-#works .content-title {
-  color: #1869BC;
-}
-
-.works-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.works-item-wrap {
-  width: 45%;
-  height: 45%;
-  text-align: center;
-  background: #fff;
-}
-
-.works-item {
-  transition: 0.2s;
-}
-
-.works-item:hover {
-  opacity: 0.7;
-  transition: 0.2s;
-}
-
-.works-item-title {
-  margin-bottom: 5px;
-}
-
-/*---------------------------------
-media min640
----------------------------------*/
-@media (min-width: 640px) {
-  /*---------------------------------
-  works
-  ---------------------------------*/
-  .works-item-wrap {
-    width: 30%;
-    height: 30%;
-  }
-
-  .works-wrapper::after {
-    content: "";
-    display: block;
-    width: 30%;
-  }
-}
-/*---------------------------------
-@media min1040
----------------------------------*/
-@media (min-width: 1040px) {
-  /*---------------------------------
-  works
-  ---------------------------------*/
-  .works-item-wrap {
-    width: 23%;
-    height: 23%;
-  }
-
-  .works-wrapper::after {
-    width: 23%;
-  }
-  .works-wrapper::before {
-    content: "";
-    display: block;
-    width: 23%;
-    order: 1;
+    margin-left: 50%;
   }
 }
 /*---------------------------------
@@ -1304,4 +863,33 @@ media min640
     width: 100px;
   }
 }
-/*# sourceMappingURL=style.css.map */
+.contact-check {
+  display: block;
+  width: 90%;
+  margin: 30px auto;
+}
+
+input {
+  position: relative;
+  z-index: 50;
+  display: inline-block;
+  padding: 3px 8px;
+  border-radius: 5px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+input:hover {
+  opacity: 0.7;
+}
+
+input[type=button] {
+  color: #1869bd;
+  background: #fff;
+}
+
+input[type=submit] {
+  background: #1869bd;
+  color: #fff;
+}
+/*# sourceMappingURL=contact.css.map */
