--- a/css/pages/_works.scss
+++ b/css/pages/_works.scss
@@ -35,6 +35,10 @@ works
   opacity: .7;
   transition: .2s
 }
+.works-item-img {
+  box-shadow: 2px 1px 7px #0a0a5f9e;
+}
+
 .works-item-title {
   margin-bottom: 5px;
 }
