--- a/css/pages/_about.scss
+++ b/css/pages/_about.scss
@@ -40,6 +40,16 @@ about
   z-index:0;
 }
 
+.dance-pic {
+  margin: 0 auto;
+  width: 300px;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 500px;
+  z-index: 0;
+}
+
 .sky-pic {
   width: 600px;
   max-height: 600px;
@@ -51,15 +61,21 @@ about
   z-index: -0;
 }
 
-.dance-pic {
-  margin: 0 auto;
-  width: 300px;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 500px;
-  z-index: 0;
+.sky-about-pages {
+  top: -100px;
 }
+
+.profile-flex {
+  display: flex;
+  margin-top: 20px;
+  .profile-mr {
+    margin-right: 10px;
+  }
+  .profile {
+    line-height: 1.8;
+  }
+}
+
 
 
 /*---------------------------------
@@ -111,6 +127,7 @@ media min640
     max-height: 700px;
     left: 20px;
   }
+ 
 }
 
 
