--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ header
   width: 100%;
   position: fixed;
   background: #fff;
+  box-shadow: 0 2px 8px #1869BC;
   padding: 5px 0;
   z-index: 200;
 }
@@ -740,6 +741,16 @@ about
   z-index: 0;
 }
 
+.dance-pic {
+  margin: 0 auto;
+  width: 300px;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 500px;
+  z-index: 0;
+}
+
 .sky-pic {
   width: 600px;
   max-height: 600px;
@@ -752,14 +763,19 @@ about
   z-index: 0;
 }
 
-.dance-pic {
-  margin: 0 auto;
-  width: 300px;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 500px;
-  z-index: 0;
+.sky-about-pages {
+  top: -100px;
+}
+
+.profile-flex {
+  display: flex;
+  margin-top: 20px;
+}
+.profile-flex .profile-mr {
+  margin-right: 10px;
+}
+.profile-flex .profile {
+  line-height: 1.8;
 }
 
 /*---------------------------------
@@ -859,6 +875,10 @@ works
 .works-item:hover {
   opacity: 0.7;
   transition: 0.2s;
+}
+
+.works-item-img {
+  box-shadow: 2px 1px 7px #0a0a5f9e;
 }
 
 .works-item-title {
